--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sass": "^1.60.0",
     "swiper": "^9.2.0",
     "vue-content-loader": "^2.0.1",
+    "vue-lazyload": "^3.0.0-rc.2",
     "vue-router": "^4.1.6",
     "vue-video-player": "^6.0.0",
     "vue3-apexcharts": "^1.4.1",
